{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 111,
  "lineage": "d365e1c8-e9c0-3e39-f44c-a96e5dc51834",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "grocery_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0444794b421ec32e4",
            "arn": "arn:aws:ec2:eu-central-1:768871025788:instance/i-0e4925d4acc5f2487",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e4925d4acc5f2487",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "francisco_key_aw_masterschool",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a32b7fdfc00164db",
            "private_dns": "ip-10-0-10-251.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.251",
            "public_dns": "ec2-35-158-55-28.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.158.55.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03634cdee746f4990",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e4316aaf982a85fb",
            "tags": {
              "Name": "GroceryApp-EC2"
            },
            "tags_all": {
              "Name": "GroceryApp-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06967b6d3d395e265"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.grocery_rds",
            "aws_db_subnet_group.grocery_db_subnet_group",
            "aws_security_group.grocery_ec2_sg",
            "aws_security_group.grocery_rds_sg",
            "aws_subnet.grocery_subnet_a",
            "aws_subnet.grocery_subnet_b",
            "aws_vpc.grocery_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "grocery_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:768871025788:internet-gateway/igw-0ff6f28a2791cab0f",
            "id": "igw-0ff6f28a2791cab0f",
            "owner_id": "768871025788",
            "tags": {
              "Name": "grocery-igw"
            },
            "tags_all": {
              "Name": "grocery-igw"
            },
            "vpc_id": "vpc-0a94b7d9a198b1e31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.grocery_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "grocery_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:768871025788:route-table/rtb-014755832ffb9c862",
            "id": "rtb-014755832ffb9c862",
            "owner_id": "768871025788",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ff6f28a2791cab0f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "grocery-rt"
            },
            "tags_all": {
              "Name": "grocery-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a94b7d9a198b1e31"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.grocery_igw",
            "aws_vpc.grocery_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "grocery_rta_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0294998d547b055c0",
            "route_table_id": "rtb-014755832ffb9c862",
            "subnet_id": "subnet-0e4316aaf982a85fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.grocery_igw",
            "aws_route_table.grocery_rt",
            "aws_subnet.grocery_subnet_a",
            "aws_vpc.grocery_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "grocery_rta_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8acf03466a71401",
            "route_table_id": "rtb-014755832ffb9c862",
            "subnet_id": "subnet-07d3c23bce89e3c8b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.grocery_igw",
            "aws_route_table.grocery_rt",
            "aws_subnet.grocery_subnet_b",
            "aws_vpc.grocery_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "grocery_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:768871025788:security-group/sg-06967b6d3d395e265",
            "description": "Allow SSH and Flask app traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06967b6d3d395e265",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5006,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5006
              }
            ],
            "name": "grocery-ec2-sg",
            "name_prefix": "",
            "owner_id": "768871025788",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grocery-ec2-sg"
            },
            "tags_all": {
              "Name": "grocery-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a94b7d9a198b1e31"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.grocery_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "grocery_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:768871025788:security-group/sg-0c97a1a7a1163bd22",
            "description": "Allow PostgreSQL access from EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c97a1a7a1163bd22",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06967b6d3d395e265"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "grocery-rds-sg",
            "name_prefix": "",
            "owner_id": "768871025788",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grocery-rds-sg"
            },
            "tags_all": {
              "Name": "grocery-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a94b7d9a198b1e31"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.grocery_ec2_sg",
            "aws_vpc.grocery_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "grocery_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:768871025788:subnet/subnet-0e4316aaf982a85fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4316aaf982a85fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "768871025788",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "grocery-subnet-a"
            },
            "tags_all": {
              "Name": "grocery-subnet-a"
            },
            "vpc_id": "vpc-0a94b7d9a198b1e31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.grocery_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "grocery_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:768871025788:subnet/subnet-07d3c23bce89e3c8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d3c23bce89e3c8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "768871025788",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "grocery-subnet-b"
            },
            "tags_all": {
              "Name": "grocery-subnet-b"
            },
            "vpc_id": "vpc-0a94b7d9a198b1e31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.grocery_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "grocery_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:768871025788:vpc/vpc-0a94b7d9a198b1e31",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06f76a10231f7cf88",
            "default_route_table_id": "rtb-021fbd3bd8cfc438f",
            "default_security_group_id": "sg-04b068c2cec9cd630",
            "dhcp_options_id": "dopt-0a8a765a68a1ceac3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a94b7d9a198b1e31",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-021fbd3bd8cfc438f",
            "owner_id": "768871025788",
            "tags": {
              "Name": "grocery-vpc"
            },
            "tags_all": {
              "Name": "grocery-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}